--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8123
   servlet:
     context-path: /api
+    # cookie 30 天过期
+    session:
+      cookie:
+        max-age: 2592000
 
 spring:
   application:
@@ -22,6 +26,13 @@ spring:
     host: 127.0.0.1
     port: 6379
     timeout: 5000
+  # session 配置
+  session:
+    store-type: redis
+    # session 30 天过期
+
+
+
 
 mybatis-plus:
   configuration:
