--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,34 @@ spring:
   session:
     store-type: redis
     # session 30 天过期
+  # 空间图片分表
+  shardingsphere:
+    datasource:
+      names: yu_picture
+      yu_picture:
+        type: com.zaxxer.hikari.HikariDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/yu_picture
+        username: root
+        password: 123456
+    rules:
+      sharding:
+        tables:
+          picture:
+            actual-data-nodes: yu_picture.picture  # 动态分表
+            table-strategy:
+              standard:
+                sharding-column: spaceId
+                sharding-algorithm-name: picture_sharding_algorithm  # 使用自定义分片算法
+        sharding-algorithms:
+          picture_sharding_algorithm:
+            type: CLASS_BASED
+            props:
+              strategy: standard
+              algorithmClassName: com.yupi.yupicturebackend.manager.sharding.PictureShardingAlgorithm
+    props:
+      sql-show: true
+
 
 
 
@@ -43,6 +71,7 @@ mybatis-plus:
       logic-delete-field: isDelete #全局逻辑删除的字段名
       logic-delete-value: 1        #逻辑已删除值（默认为1）
       logic-not-delete-value: 0    #逻辑未删除值（默认为0）
+    enable-sql-runner: true
 
 #接口文档配置
 # springdoc-openapi项目配置
