--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,19 @@
             <version>3.4.2</version>
         </dependency>
 
+        <!-- Maven 引入 TwelveMonkeys 插件 -->
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-jpeg</artifactId>
+            <version>3.9.4</version>
+        </dependency>
+        <!-- pom.xml -->
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-webp</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+
 
 
     </dependencies>
